# Interview

./: .env  ARCHITECTURE.md  PROJECT_TREE.md  README.md  check_tables.py  docker-compose.yml  generate_tree.py  pyproject.toml  ruff.toml  run_eval.py  test-answers-1.md  test-answers-2.md  test-answers-3.md  test-answers.md  test-questions.md
brusnika-knowledge-layer/: PROJECT_TREE.md  README.md  generate_tree.py  pyproject.toml  ruff.toml
brusnika-knowledge-layer/data/knowledge_base/: README.md  test-questions.md
brusnika-knowledge-layer/data/knowledge_base/commercial/: broker-partnership.md  handover-to-client.md  pricing-policy.md  sales-process.md
brusnika-knowledge-layer/data/knowledge_base/company/: history-and-milestones.md  org-structure.md  regional-offices.md
brusnika-knowledge-layer/data/knowledge_base/construction/: defect-management.md  materials-acceptance.md  quality-control.md  safety-incident-response.md  safety-rules.md  sgp-overview.md  subcontractor-management.md  work-order-process.md
brusnika-knowledge-layer/data/knowledge_base/development/: permitting-process.md  project-lifecycle.md  project-stages-gates.md
brusnika-knowledge-layer/data/knowledge_base/exploitation/: warranty-claims.md
brusnika-knowledge-layer/data/knowledge_base/finance/: cost-control.md
brusnika-knowledge-layer/data/knowledge_base/hr/: business-travel-policy.md  onboarding-construction.md  onboarding.md  performance-review.md
brusnika-knowledge-layer/data/knowledge_base/it/: access-request-process.md  systems-landscape.md
brusnika-knowledge-layer/src/: schema.py
(+39 files in other folders)
