[project]
name = "brusnika-knowledge-layer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=1.3.9,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "python-frontmatter (>=1.3.0,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "brusnika_knowledge_layer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.17,<0.16.0)",
    "pytest (>=9.1.0,<10.0.0)"
]
